Version XI - xxxx edition. 25 September 2023

Allow to not save configuration when exiting ZEsarUX
Allow to select normal ZEsarUX logo or X Anniversary logo
Menus can no longer be minimized (that had no sense)
Added support for ZENG on curses driver

----


Version X - 10th Anniversary edition. 24 September 2023

This is a special edition to celebrate the 10 years old of ZEsarUX. Version is called "X" (actually is version 10.10)

* New things added:

Added new compiled versions: Ubuntu and Fedora
Added PCW colour modes
Added PCW Joysticks support: Kempston, Cascade, DKTronics, OPQASpace
Added screen previews of directories and compressed files on File Selector
Added flash support on screen previews on File Selector
Added rom file selection for any machine you select, rom file name is saved on configuration
Added another toy "ZXLife" to a new menu Procrastinate
Added Ascii Table window
Added Creator Info to ZSF snapshots
Added compilation system release to Compile info window
Added Docker support
Added another easter egg ;)

* Improvements:

Improved ZENG:
- Allow to connect more than two hosts (up to 16)
- Hostnames/IPs accept changing port using ":port"
- Allow to disable sending input events (keyboard, joystick)
- Sync flash state between instances
- Added ZENG support for Jupiter Ace

Improved AY Player:
- Added playlist
- Added shuffle mode
- Added silence detection
- Added show current AY Player song playing on console

Improved Text Adventure features:
- Use artificial intelligence to get realistic images for location description text
- Added configuration setting for char filter
- Added configuration settings for Text Adventure Map: follow, show unvisited, show unconnected, show objects, show pictures, zoom level
- Added export draw strings to external file (txt, asm, c or pas)
- Preserve zoom level on Text Adventure Map when loading games
- Added GAC support for Text Adventure Map
- Added GAC support for Debug Adventure (cpu view 8) supporting: